--- a/src/layout/Footer.css
+++ b/src/layout/Footer.css
@@ -7,26 +7,29 @@
     height: 70%;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
-    display: flex;
+    /* display: flex; */
 }
-.leftBox{
+.leftBoxZwb{
     width: 20%;
     height: 100%;
+    float: left;
     border-right: 1px solid #ccc;
 }
-.leftBox img{
+.leftBoxZwb img{
     width: 165px;
     height: 30px;
 }
-.mainBox{
+.mainBoxZwb{
     width: 60%;
     height: 100%;
     border-right: 1px solid #ccc;
+    float: left;
     display: flex;
 }
-.rightBox{
-    width: 20%;
+.rightBoxZwb{
+    width: 19%;
     height: 100%;
+    float: left;
 }
 .box{
     width: 40%;
@@ -36,7 +39,7 @@
 .box span{
     font-size: 12px;
 }
-.footerBox{
+.footerBoxZwb{
     width: 100%;
     height: 70%;
     display: flex;
@@ -65,7 +68,7 @@
     margin: 50px auto;
     text-align: center;
 }
-.mainFooter{
+.mainFooterZwb{
     width: 100%;
     height: 15%;
     border-bottom: 1px solid #ccc;
