--- a/src/layout/Master.css
+++ b/src/layout/Master.css
@@ -1,5 +1,5 @@
 .Mac{
-    width: 1000px;
+    width: 1280px;
     height: 135px;
     overflow: hidden;
     position: relative;
@@ -18,7 +18,7 @@
 .leftBox {
     position:absolute;
     left:3%;
-    top:9%;
+    top:25%;
     width:50px;
     height:50px;
     text-align:center;
@@ -27,13 +27,14 @@
 }
 .rightBox {
     position:absolute;
-    right: 25%;
-    top:9%;
+    right: 5%;
+    top:25%;
     width:50px;
     height:50px;
     text-align:center;
     border-radius:50%;
     border: none;
+    z-index: 999;
 }
 .leftHid{
     display: none;
