--- a/src/layout/sj_index.css
+++ b/src/layout/sj_index.css
@@ -434,3 +434,10 @@
     top: 80%;
     margin-left: -60px;
 }
+/* 轮播图俩组件 */
+.all_main_swiper{
+    width: 100%;
+    height: 350px;
+ float: left;
+ 
+}
