--- a/src/layout/Calendar.css
+++ b/src/layout/Calendar.css
@@ -2,6 +2,7 @@
 .calendar {
   font-family: 'Arial', sans-serif;
   text-align: center;
+  font-size: 14px;
 }
 
 h2 {
@@ -10,12 +11,14 @@ h2 {
 
 table {
   width: 80%;
+  height: 80%;
   border-collapse: collapse;
+  float: left;
 }
 
 th, td {
   border: 1px solid #ddd;
-  padding: 10px;
+  padding: 1px;
   font-size: 14px;
 }
 
@@ -54,26 +57,33 @@ td:hover {
 .prev-month, .next-month {
   color: #aaa;
 }
-
+.car{
+  width: 20%;
+  height: 550px;
+  position: relative;
+  float: left;
+  overflow: scroll;
+}
 .current-date {
   background-color: #b3d4fc; /* 高亮颜色，可以根据需要调整 */
 }
 .carBox{
   width: 100%;
   height: 100%;
-  overflow: scroll;
 }
 .carH{
-  position: fixed;
-  top: 5%;
+  position: absolute;
+  top: 0;
+  right: 0;
   background-color: white;
-  width: 20%;
-  height: 5%;
+  width: 100%;
+  height: 2%;
+  z-index: 999;
 }
 .boxCon{
   width: 100%;
   height: 10%;
-  margin-top: 12%;
+  margin-top: 20%;
 }
 .headBox{
   width: 100%;
