--- a/src/layout/lbt.css
+++ b/src/layout/lbt.css
@@ -1,7 +1,7 @@
 .carousel-container {
     position: relative;
     cursor: pointer;
-    width: 100%;
+    width: 1280px;
     height: 200px;
     border-radius: 10px;
     overflow: hidden;
@@ -22,7 +22,7 @@
 }
 
 .left-arrow {
-    left: -20px;
+    left: 10px;
 }
 
 .right-arrow {
