--- a/src/layout/sj_index.css
+++ b/src/layout/sj_index.css
@@ -436,8 +436,8 @@
 }
 /* 轮播图俩组件 */
 .all_main_swiper{
-    width: 100%;
+    width: 1280px;
     height: 350px;
- float: left;
+    float: left;
  
 }
