--- a/src/layout/top_choose.css
+++ b/src/layout/top_choose.css
@@ -1,41 +1,66 @@
-.box{
+.topchoose_box{
     width: 100%;
     height: 100%;
 }
-.top{
+.topchoose_top{
     width: 100%;
     height: 50px;
     padding-left: 20px;
+
 }
-.top span{
-    background-color: #ccc;
-    padding: 5px;
+.topchoose_top p{
+    display: inline-block;
+    line-height: 50px;
+    font-size: 13px;
+    color: #666;
+    margin-left: 10px;
+}
+.topchoose_top p a{
+    text-decoration: none;
+    font-size: 13px;
+}
+.topchoose_top_con{
+    background-color: #eef3f5e3;
+    padding: 3px;
     border-radius: 10px;
+    font-size: 11px;
+    text-align: center;
+    color: #666;
 }
-.top span:hover{
+.topchoose_top span:hover{
     color: blue;
 }
-.conbox{
+.topchoose_conbox{
     width: 100%;
     height: 100%;
 }
-.type{
-    height: 50px;
+.topchoose_type{
+    height: 40px;
     display: flex;
     margin-left: 20px;
 }
-.type h2{
-    line-height: 50px;
+.topchoose_type h2{
+    line-height: 30px;
 }
-.type div{
+.topchoose_type div{
     margin-left: 20px;
-    line-height: 50px;
+    line-height: 30px;
+     font-size: 13px;
+     
 }
-.type div:hover{
+.topchoose_type div:hover{
     color: blue;
 }
-.typetitle{
+.topchoose_typetitle_con{
+    color: #555
+}
+
+.topchoose_typetitle_con:hover {
+    color: blue;
+}
+.topchoose_typetitle{
     font-weight: 800;
     font-size: 18px;
     overflow-x: hidden;
+    font-size: 13px;
 }
