--- a/src/layout/sj_index.css
+++ b/src/layout/sj_index.css
@@ -276,6 +276,7 @@
     position: absolute;
     border-radius: 8px;
     border: 2px solid #eee;
+    box-shadow:#ccc 0px 0px 10px;
 }
 .Calendar_box_hidden{
     display: none;
