--- a/src/layout/sj_index.css
+++ b/src/layout/sj_index.css
@@ -29,15 +29,15 @@
 }
 .img_box img{
     width: 130px;
-    height: 22px;
-    margin-top: 20px;
+    /* height: px; */
+    margin-top: 15px;
 }
 .logo_hover_box{
     width: 200px;
     height: 80px;
     position: absolute;
     left: 40px;
-    top:-20px;
+    top:-15px;
     z-index: 23;
     display: none;
 }
