--- a/src/layout/Rightcard.css
+++ b/src/layout/Rightcard.css
@@ -1,5 +1,6 @@
 .midcard_Mac{
-    width: 1200px;
+    /* width: 1200px; */
+    width: 1050px;
     /* background-color: red; */
     height: 400px;
     overflow: hidden;
