--- a/src/layout/Onlycard.css
+++ b/src/layout/Onlycard.css
@@ -88,7 +88,8 @@
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
     padding: 3px;
+    z-index:99999;
 }
-.onecard_box:hover .shoucang{
+.onecard_box:hover .onecard_shoucang{
     display: block;
 }
