--- a/src/layout/sj_index.css
+++ b/src/layout/sj_index.css
@@ -668,12 +668,13 @@
 .all_main_h5_box1{
     width: 100%;
     height: 400px;
+    margin-bottom: 60px;
    
 }
 .all_main_h5_con1{
     width: 1280px;
     height: 100%;
-     background-color: pink;
+     /* background-color: pink; */
 }
 
 /* 内容撑开高 */
