--- a/src/layout/sj_index.css
+++ b/src/layout/sj_index.css
@@ -783,13 +783,16 @@
     margin-right: 15px;
 }
 .afterlogin_userinfo_box{
+   
     width: 93%;
     height: 60px;
     border-radius: 10px;
     background: #f5f7fb;
     margin-left: 10px;
     margin-top: 10px;
+     display: flex;
 }
+
 .afterlogin__main_con{
     width: 100%;
     height: 80px;
