--- a/src/layout/sj_index.css
+++ b/src/layout/sj_index.css
@@ -676,11 +676,15 @@
     height: 100%;
      /* background-color: pink; */
 }
-
+.all_main_h5_box_child{
+    width: 100%;
+    height: 400px;
+    margin-top: 20px;
+}
 /* 内容撑开高 */
 .all_main_h5_box2{
     width: 100%;
-  background-color: pink;
+  /* background-color: pink; */
 }
 .all_main_h5_con1{
     width: 1280px;
