--- a/src/layout/Onlycard.css
+++ b/src/layout/Onlycard.css
@@ -16,6 +16,7 @@
     /* border: 1px solid #000; */
     overflow: hidden;
     position: relative;
+    border-radius: 10px;
 }
 .onecard_box:hover{
     height: 350px;
@@ -25,6 +26,7 @@
 }
 
 .onecard_botombox{
+    border-radius: 10px;
     width: 200px;
     height: 50px;
     background-color: #fff;
