--- a/src/layout/Rightcard.css
+++ b/src/layout/Rightcard.css
@@ -1,7 +1,5 @@
 .midcard_Mac{
-    /* width: 1200px; */
-    width: 1085px;
-    /* background-color: red; */
+    width: 100%;
     height: 400px;
     overflow: hidden;
     position: relative;
